apps/kubewall/base/service.yaml
---
# Source: kubewall/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubewall
  namespace: kubewall-system
  labels:
    helm.sh/chart: kubewall-0.0.11
    app.kubernetes.io/name: kubewall
    app.kubernetes.io/instance: kubewall
    app.kubernetes.io/version: "0.0.11"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: kubewall
    app.kubernetes.io/instance: kubewall
