apps/kubewall/base/kubewall-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: kubewall-route
  namespace: kubewall
spec:
  hostnames:
  - kubewall.lokal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kubewall-server
      port: 8443
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
